--- a/src/components/PresentationCard.astro
+++ b/src/components/PresentationCard.astro
@@ -10,7 +10,7 @@ import TechGrid from "./TechGrid.astro";
             <h1>
                 Hi, I'm <span class="highlight">Matias</span>, <br /><span
                     class="highlight">Web Developer</span
-                >
+                > && <span class="highlight">Minecraft Modder</span>
                 <br />
             </h1>
         </div>
@@ -51,10 +51,6 @@ import TechGrid from "./TechGrid.astro";
     </div>
     <div class="description">
         <section>
-            <p>
-                Web developer & Minecraft modder. Passionate about Rust,
-                compilers and creative coding
-            </p>
             <p>
                 Proficient in <strong class="keyword">Java</strong>, currently
                 learning
