--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -7,15 +7,14 @@ const {
 } = Astro.props;
 ---
 
-<div class="card">
+<a href={link} target="_blank" rel="noopener noreferrer" class="card">
     <img src={image} alt="carousel element" />
 
     <div class="card-content">
         <strong>{title}</strong>
         <p>{description}</p>
-        <a href={link} target="_blank" rel="noopener noreferrer">See more</a>
     </div>
-</div>
+</a>
 
 <style>
     .card {
