--- a/src/components/ProjectGrid.astro
+++ b/src/components/ProjectGrid.astro
@@ -1,10 +1,36 @@
+---
+import ProjectCard from "./ProjectCard.astro";
+
+interface Card {
+    title: string;
+    description: string;
+    image: string;
+    link: string;
+}
+
+const { projects = [] } = Astro.props as {
+    projects: Card[];
+};
+---
+
 <div class="card-grid">
-    <slot />
+    {
+        projects.map((card) => (
+            <ProjectCard
+                title={card.title}
+                description={card.description}
+                link={card.link}
+                image={card.image}
+            />
+        ))
+    }
 </div>
+
 <style>
     .card-grid {
-        display: flex;
-        flex-direction: row;
+        display: grid;
+        grid-template-columns: auto auto auto;
+        gap: 1rem;
         width: 100%;
     }
 </style>
