--- a/src/components/TechGrid.astro
+++ b/src/components/TechGrid.astro
@@ -1,11 +1,30 @@
 ---
-const { title = "CategoryName" } = Astro.props;
+import SkillProgress from "./SkillProgress.astro";
+
+interface Skill {
+    icon: string;
+    progress: number;
+    title: string;
+}
+
+const { title = "CategoryName", skills = [] } = Astro.props as {
+    title?: string;
+    skills: Skill[];
+};
 ---
 
 <div class="tech-category">
     <div class="tech-category-title">{title}</div>
     <div class="tech-grid">
-        <slot />
+        {
+            skills.map((skill) => (
+                <SkillProgress
+                    icon={skill.icon}
+                    progress={skill.progress}
+                    title={skill.title}
+                />
+            ))
+        }
     </div>
 </div>
 
