--- a/src/components/CarouselItem.astro
+++ b/src/components/CarouselItem.astro
@@ -1,4 +1,6 @@
 ---
+import { Image } from "astro:assets";
+
 const {
     title = "Title",
     image = "https://images.pexels.com/photos/635699/pexels-photo-635699.jpeg",
@@ -7,7 +9,17 @@ const {
 ---
 
 <article>
-    <img src={image} alt="carousel element" />
+    {
+        image && (
+            <Image
+                src={image}
+                alt={title}
+                width={300}
+                height={200}
+                style={{ objectFit: "cover" }}
+            />
+        )
+    }
     <h2>{title}</h2>
     <div>
         <slot />
