--- a/src/components/Icon.astro
+++ b/src/components/Icon.astro
@@ -28,8 +28,8 @@ const dimensions = {
 
 <style>
     .dev {
-        width: 3.625rem;
-        height: 3.625rem;
+        min-width: 2.625rem;
+        min-height: 2.625rem;
         margin: 0.5rem;
         opacity: 0.9;
         transition:
