--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -1,15 +1,16 @@
 ---
+import { Image } from "astro:assets";
+
 const {
     title = "ProjectName",
     description = "Some info here...",
-    link = "#",
-    image = "https://images.pexels.com/photos/635699/pexels-photo-635699.jpeg",
+    link,
+    image,
 } = Astro.props;
 ---
 
 <a href={link} target="_blank" rel="noopener noreferrer" class="card">
-    <img src={image} alt="carousel element" />
-
+    {image && <Image src={image} width={0} height={0} alt="project card" />}
     <div class="card-content">
         <strong>{title}</strong>
         <p>{description}</p>
@@ -22,9 +23,8 @@ const {
         position: relative;
         flex-direction: column;
         align-items: center;
-        width: 99%;
+        width: 800px;
         height: 500px;
-        margin: 10px;
         border-radius: 0.5rem;
         overflow: hidden;
         filter: grayscale();
@@ -33,6 +33,13 @@ const {
             box-shadow 0.3s ease,
             border-radius 0.3s ease,
             filter 0.3s ease;
+    }
+
+    @media (max-width: 765px) {
+        .card {
+            width: 95%;
+            height: 300px;
+        }
     }
 
     .card:hover {
