--- a/src/components/TechGrid.astro
+++ b/src/components/TechGrid.astro
@@ -13,7 +13,7 @@ const { title = "CategoryName", skills = [] } = Astro.props as {
 };
 ---
 
-<div>
+<div id="t">
     <h6>{title}</h6>
     <div class="grid">
         {
@@ -27,3 +27,17 @@ const { title = "CategoryName", skills = [] } = Astro.props as {
         }
     </div>
 </div>
+<style>
+    #t {
+        text-align: center;
+    }
+
+    @media (max-width: 765px) {
+        .grid {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 10px;
+            justify-items: center;
+        }
+    }
+</style>
