--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,8 +30,8 @@ import { Image } from "astro:assets";
 							Hi, I'm <span class="highlight">Matias</span>
 						</h1>
 						<h2>
-							Web Developer & <span class="highlight"
-								>Minecraft Modder</span
+							<span class="highlight"> Web Developer</span> & <span
+								class="highlight">Minecraft Modder</span
 							>
 						</h2>
 						<p class="profile-intro">
